crates/ir/tests/snapshots/lower_test__intrinsic_println_string.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module intrinsic_println_string

; extern println

fn main() -> Unit =
  let v0: Unit = call println("hello")
  v0
