crates/ir/tests/snapshots/lower_test__json_bool.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module json_bool

; extern json_to_string
; extern println

fn main() -> Unit =
  let v0: ~Json = construct Json::JBool#1(true)
  let v1: String = call json_to_string(v0)
  let v2: Unit = call println(v1)
  let v3: ~Json = construct Json::JBool#1(false)
  let v4: String = call json_to_string(v3)
  let v5: Unit = call println(v4)
  v5
