crates/ir/tests/snapshots/lower_test__json_float.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module json_float

; extern json_to_string
; extern println

fn main() -> Unit =
  let v1: ~Json = construct Json::JNum#2(1.5)
  let v2: ~Json = construct Json::JNum#2(2.75)
  let v3: ~List[Json] = construct List::Nil#1()
  let v4: ~List[Json] = construct List::Cons#0(v2, v3)
  let v5: ~List[Json] = construct List::Cons#0(v1, v4)
  let v0: ~Json = construct Json::JArr#4(v5)
  let v6: String = call json_to_string(v0)
  let v7: Unit = call println(v6)
  v7
