crates/ir/tests/snapshots/lower_test__json_string.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module json_string

; extern json_object
; extern json_to_string
; extern println

fn main() -> Unit =
  let v1: ~Json = construct Json::JStr#3("hello")
  let v2: (~String, ~Json) = tuple("greeting", v1)
  let v3: ~List[(~String, ~Json)] = construct List::Nil#1()
  let v4: ~List[(~String, ~Json)] = construct List::Cons#0(v2, v3)
  let v0: Json = call json_object(v4)
  let v5: String = call json_to_string(v0)
  let v6: Unit = call println(v5)
  v6
