crates/ir/tests/snapshots/lower_test__leak_caller_ok.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module leak_caller_ok

type List[e] = Cons#0(a, List[a]) | Nil#1
type Ordering = LT#0 | EQ#1 | GT#2
type Option[f] = Some#0(b) | None#1
type Result[g, h] = Ok#0(d) | Err#1(c)

fn f0 main() -> Unit =
  let v0: Int = call f48(5)
  let v1: Unit = call f1(v0)
  v1
