crates/ir/tests/snapshots/lower_test__let_annotation_own_preserved.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module let_annotation_own_preserved

fn consume(v0: ~Int) -> Int =
  v0

fn test() -> Int =
  let_join v3(v1: ~Int) =
    let v2: Int = call consume(v1)
    v2
  in
  jump v3(2)
