crates/ir/tests/snapshots/lower_test__list_concat.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module list_concat

; extern concat
; extern length
; extern println

fn main() -> Unit =
  let v0: ~List[Int] = construct List::Nil#1()
  let v1: ~List[Int] = construct List::Cons#0(3, v0)
  let v2: ~List[Int] = construct List::Cons#0(2, v1)
  let v3: ~List[Int] = construct List::Cons#0(1, v2)
  let v4: ~List[Int] = construct List::Nil#1()
  let v5: ~List[Int] = construct List::Cons#0(6, v4)
  let v6: ~List[Int] = construct List::Cons#0(5, v5)
  let v7: ~List[Int] = construct List::Cons#0(4, v6)
  let v8: List[Int] = call concat(v3, v7)
  let v9: Int = call length(v8)
  let v10: Unit = call println(v9)
  v10
